--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,66 @@
-@import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body{
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    background-image: url('../public/images/bg1.jpg');
+    background-size: contain;
+    font-family: 'Press Start 2P';
+    overflow: hidden;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.cell{
+    width: auto;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.stage{
+    grid-gap: 1px;
+    border: 2px solid #333;
+    width: 100%;
+    max-width: 25vw;
+    background-color: #111;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.wrapper{
+    display: flex;
+    align-items: flex-start;
+    padding: 40px;
+    margin: 0 auto;
+    max-width: 900px;
+}
+
+aside{
+    width: 100%;
+    max-width: 200px;
+    display: block;
+    padding: 0 20px;
+}
+
+.field{
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    margin: 0 0 20px 0;
+    padding: 20px;
+    border: 4px solid #333;
+    min-height: 30px;
+    width: 100%;
+    border-radius: 20px;
+    background-color: #000;
+}
+
+.start{
+    box-sizing: border-box;
+    margin: 0 0 20px 0;
+    padding: 20px;
+    min-height: 30px;
+    width: 100%;
+    border-radius: 20px;
+    border: none;
+    color: white;
+    background: #333;
+    font-size: 1rem;
+    outline: none;
 }
